# ServerMultimetr

./: CMakeLists.txt  README.md  main.cpp
Sources/: Channel.cpp  Channel.h  Command.h  CommunicationCenter.cpp  CommunicationCenter.h  Dispatcher.cpp  Dispatcher.h  GetResult.cpp  GetResult.h  GetStatus.cpp  GetStatus.h  Multimetr.cpp  Multimetr.h  RangeVoltage.cpp  RangeVoltage.h  Server.cpp  Server.h  SetRange.cpp  SetRange.h  SocketServer.cpp  SocketServer.h  StartMeasure.cpp  StartMeasure.h  StopMeasure.cpp  StopMeasure.h  System.cpp  System.h
